--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "See it here:",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "gulp": "gulp",
+    "svg": "gulp opt-svgs",
+    "img": "gulp opt-imgs"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "gulp": "^3.9.1",
-    "harp": "^0.25.0"
+    "harp": "^0.27.0"
   },
   "devDependencies": {
-    "browser-sync": "^2.23.6",
+    "browser-sync": "^2.24.6",
     "gulp-imagemin": "^4.1.0",
     "gulp-svgmin": "^1.2.4"
   }
